# language-prompts

./: .gitignore  README.md  create.py  requirements.txt
.github/workflows/: run-guide.yml
agents/: checklist.md  system-prompt.md
apps/guide-cli/: README.md  pyproject.toml
apps/guide-cli/src/guide_cli/: __init__.py  cli.py  discover.py
apps/guide-cli/templates/: tourism-guide.tex
languages/japanese/: spec.md
languages/japanese/chapters/: 00-cover.md  01-core-phrases.md  01-language-foundations.md  03-writing-systems.md  05-directions-navigation.md  05-transportation.md  09-cultural-guide.md  09-hotels.md
languages/japanese/sections/: 00-cover.md  02-vocabulary-shopping.md  03-vocabulary-restaurants.md  04-vocabulary-hotels.md  05-vocabulary-transportation.md  10-pronunciation.md
outputs/: build-manifest.json
scripts/: discover-languages.py  install-fonts.sh  install-guide-cli.sh
