[project]
name = "guide-cli"
version = "0.1.0"
description = "Tourist guide PDF generator"
readme = "README.md"
authors = [
    { name = "Urmzd Mukhammadnaim", email = "urmzd.consulting@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
]

[project.scripts]
guide-cli = "guide_cli:main"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"
